* Exportscript heeft een eigen configuratiebestand, bij verstek `Export-SchoolDataSync.ini`, wijzigbaar met een commandoregelparameter.
* LeerlingID's en docentID's worden altijd geconverteerd naar onderkast. School 
Data Sync verwerkt "SIS ID" hoofdlettergevoelig, en zo hebben
wijzigingen in hoofdlettergebruik in Magister geen verlies van synchronisatie meer tot gevolg. 
** Maximum aantal logbestanden is instelbaar in het script.

## 20210709
* Import-Magister: Vermijd fout bij omzetten van lege ID naar kleine letters.

## 20210803
* Automatische logrotatie: huidig logbestand is "{scriptnaam}.log". Een instelbaar aantal backups worden bewaard met de naam "{scriptnaam}.01.log".
* Export-SchoolDataSync : toegevoegd mogelijkheid tot filteren op teamnaam
* Verwijderd code voor aanmaak van lijsten met niet-actieve teams.

# 20210824
* Importscript: code cleanup, progressiebalktekst
* Alle logbestanden komen in een submap "Log".
* Importscript: Excepties in Invoke-WebClient worden nu gelogd in het logbestand.
* Exportscript: active-teamslijst: direct importeerbaar in Excel; duidelijkere kolomnamen.

# 20210825
* Exportscript: verbeterde bepaling van actieve teams,
* Exportscript: toevoeging configuratieparameter bon_match_docentlesgroep_aan_leerlingklas,
* Exportscript: toevoeging configuratieparameter docenten_per_team_limiet,
* documentatie bijgewerkt.

## TO DO
Dit zijn geplande wijzigingen zonder een vastgesteld tijdpad (krabbels van de auteur).

* SDS V2 format 
* parameter viewonly toont resultaat.
* controleer omgang met ongeldige tekens, https://support.microsoft.com/en-us/office/invalid-file-names-and-file-types-in-onedrive-and-sharepoint-64883a5d-228e-48f5-b3d2-eb39e07630fa?ui=en-us&rs=en-us&ad=us#invalidcharacters
* configuratievariabele toevoegen om het toevoegen van de vakomschrijving aan de teamnaam facultatief te maken.
* configuratievariabelen moeten in een eigen structuur worden bewaard.