@@ -147,6 +147,10 @@ wijzigingen in hoofdlettergebruik in Magister geen verlies van synchronisatie me
 * Exportscript: toevoeging configuratieparameter docenten_per_team_limiet,
 * documentatie bijgewerkt.
 
+# 20210827
+* fout hersteld waardoor exceptions niet werden gelogd in het logbestand
+
+
 ## TO DO
 Dit zijn geplande wijzigingen zonder een vastgesteld tijdpad (krabbels van de auteur).
 
